--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
+    "google-spreadsheet": "^4.1.1",
     "next": "13.4.12",
+    "nodemailer": "^6.9.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^10.0.4",
