--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@fontsource/montserrat": "^5.0.5",
     "@fontsource/playfair-display": "^5.0.5",
     "@fontsource/roboto": "^5.0.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "framer-motion": "^10.15.0",
     "google-spreadsheet": "^4.1.1",
     "next": "13.4.12",
